0030497: [REGRESSION] Mesh - wrong Poly_Polygon3D within local selection of located shape

(cherry picked from commit ef39d5f7b91a115ac0ec69f86fa1ba73e2395244)